# greenole-ota-api

./: .gitignore  pyproject.toml
ota/: manage.py
ota/device/: admin.py  models.py  serializer.py  views.py
ota/device/migrations/: 0001_initial.py
ota/file/: admin.py  models.py  service.py  views.py
ota/file/migrations/: 0001_initial.py  0002_alter_file_target_update_alter_file_update_script.py  0003_remove_file_target_update_remove_file_update_script_and_more.py  0004_file_name.py
ota/ota/: asgi.py  settings.py  urls.py  wsgi.py
ota/update/: admin.py  models.py  service.py
ota/update/migrations/: 0001_initial.py  0002_alter_versionupdate_status.py  0003_update_name_alter_versionupdate_status.py  0004_remove_versionupdate_version_update_all_devices_and_more.py  0005_alter_versionupdate_device_and_more.py  0006_rename_versions_update_devices.py
ota/utils/: celery.py  upload.py
ota/version/: admin.py  models.py  service.py
ota/version/migrations/: 0001_initial.py  0002_version_latest.py
