[tool.poetry]
name = "greenole-ota-api"
version = "0.1.0"
description = ""
authors = ["Eduardo Oliveira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
uvicorn = "^0.32.1"
djangorestframework = "^3.15.2"
boto3 = "^1.35.74"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
